--- a/index_en.html
+++ b/index_en.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style_lng.css">
     <title>Iurii Polnikov CV</title>
 </head>
-<body class="ru">
+<body class="en">
     <div class="container">
         <table id="t01" class="table table-borderless">
             <tbody>
@@ -105,12 +105,12 @@
                     <td>
                         <li>
                             <p>
-                                11.2021 - until now / Associate QA Engineer in Genesys (www.genesys.com):<br>
+                                11.2021 - until now | Associate QA Engineer in Genesys (www.genesys.com):<br>
                             </p>
                         </li>
                         <li>
                             <p>
-                                11.2021 / passed the certification exam:<br>
+                                11.2021 | passed the certification exam:<br>
                                 - [PCAP-31-03] PCAP – Certified Associate in Python Programming<br>
                                 <a href="https://www.credly.com/badges/d2216872-e1d4-4af0-bd94-54abda90bd48/linked_in">
                                 Certificate and description
@@ -119,17 +119,16 @@
                         </li>
                         <li>
                             <p>
-                                2 months / 09.2021 - 11.2021 / Software Development Trainee in KRAUD (kraud.ru):<br>
+                                2 months | 09.2021 - 11.2021 | Software Development Trainee in KRAUD (kraud.ru):<br>
                                 - support and development of an internal project on python/django/postreSQL<br>
                                 - creating new project applications<br>
                                 - setting up synchronization of target application information with 1c, okdesk, confluence, MS Active Directory<br>
-                                - simple front-end aplication on keenthemes<br>
-                                - <br>
+                                - simple front-end aplication on keenthemes<br>                            
                             </p>
                         </li>
                         <li>
                             <p>
-                                06.2021 - 10.2021 / trained on the courses sololearn.com:<br>
+                                06.2021 - 10.2021 | trained on the courses sololearn.com:<br>
                                 - Python for Beginners;<br>
                                 - Python Core;<br>
                                 - Intermediate Python;<br>                                
@@ -140,7 +139,7 @@
                         </li>
                         <li>
                             <p>
-                                08.2021 - 12.2021 / trained on the courses stepik.org<br>
+                                08.2021 - 12.2021 | trained on the courses stepik.org<br>
                                 - Python for Beginners;<br>
                                 - Python for advanced;<br>
                                 - Test automation with Selenium and Python;<br>
@@ -151,7 +150,7 @@
                         </li>                    
                         <li>
                             <p>
-                                2,5 months / 05.2021 - 07.2021 / trained on the course «Learn Python» from moscowpython.ru<br>
+                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from moscowpython.ru<br>
                                 Django project development
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
@@ -163,14 +162,14 @@
                         </li>
                         <li>
                             <p>
-                                2 years 10 months / 09.2018 - 07.2021<br>
+                                2 years 10 months | 09.2018 - 07.2021<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
                                 Deputy Dean For Academic Affairs
                             </p>
                         </li>
                         <li>
                             <p>
-                                10 years 5 months / 02.2011 - 07.2021<br>
+                                10 years 5 months | 02.2011 - 07.2021<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
                                 Senior Lecturer of the Department of Heat and Gas Supply and Ventilation
                         </p>
@@ -198,19 +197,19 @@
                             basic skills of working with Flask & Django
                         </li>
                         <li>
-                            work with the GitHub
+                            work with the Git | GitHub | Jira
+                        </li>
+                        <li>
+                            basic skills of working with Docker | Docker-compose | Jenkins
                         </li>
                         <li>
                             work experience with HTML5, CSS3, Bootstrap
                         </li>
                         <li>
-                            certificate CSoft по Revit
-                        </li>
-                        <li>
                             studied literature:<br>
-                                Automate the Boring Stuff with Python / Al Sweigart<br>
-                                Grokking Algorithms / Aditya Y. Bhargava<br>
-                                Introducing Python (in the process) / Bill Lubanovic
+                                Automate the Boring Stuff with Python | Al Sweigart<br>
+                                Grokking Algorithms | Aditya Y. Bhargava<br>
+                                Introducing Python | Bill Lubanovic
                         </li>
                     </td>
                 </tr>
@@ -228,28 +227,28 @@
                             <p>
                                 2017 - 2019<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
-                                Heat-power engineering and heating engineering / Master
+                                Heat-power engineering and heating engineering | Master
                             </p>
                         </li>
                         <li>
                             <p>
                                 2005 - 2010<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
-                                Environmental Engineering and Municipal Services / Engineer
+                                Environmental Engineering and Municipal Services | Engineer
                             </p>
                         </li>
                         <li>
                             <p>
                                 2006 - 2010<br>
                                 Saint Petersburg State University of Architecture and Civil Engineering<br>
-                                Heat-power engineering and heating engineering / Bachelor
+                                Heat-power engineering and heating engineering | Bachelor
                         </p>
                         </li>
                         <li>
                             <p>
                                 2002 - 2005<br>
                                 Petrozavodsk Engineering College<br>
-                                Power stations, networks and systems / Technicist
+                                Power stations, networks and systems | Technicist
                             </p>
                         </li>
                     </td>
