--- a/index_en.html
+++ b/index_en.html
@@ -176,7 +176,7 @@
                         </li>
                         <li>
                             <p>
-                                4 years 5 months / 02.2013 - 07.2017 <br>
+                                4 years 5 months | 02.2013 - 07.2017 <br>
                                 Bureau of Architecture «Studio-17»<br>
                                 Chief Project Engineer
                             </p>
