--- a/index_en.html
+++ b/index_en.html
@@ -128,6 +128,15 @@
                         </li>
                         <li>
                             <p>
+                                02.2022 | trained on the courses udemy.com:<br>
+                                - Docker for the Absolute Beginner - Hands On - DevOps;<br>                                
+                                <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
+                                Certificates
+                                </a>                                
+                            </p>
+                        </li>
+                        <li>
+                            <p>
                                 06.2021 - 10.2021 | trained on the courses sololearn.com:<br>
                                 - Python for Beginners;<br>
                                 - Python Core;<br>
