--- a/index_en.html
+++ b/index_en.html
@@ -120,7 +120,7 @@
                         <li>
                             <p>
                                 2 months | 09.2021 - 11.2021 | Software Development Trainee in KRAUD (kraud.ru):<br>
-                                - support and development of an internal project on python/django/postreSQL<br>
+                                - support and development of an internal project on python/django/postgreSQL<br>
                                 - creating new project applications<br>
                                 - setting up synchronization of target application information with 1c, okdesk, confluence, MS Active Directory<br>
                                 - simple front-end aplication on keenthemes<br>                            
