--- a/index_en.html
+++ b/index_en.html
@@ -120,7 +120,8 @@
                         </li>
                         <li>
                             <p>
-                                02.2022 | trained on the courses udemy.com:<br>
+                                07.2022 | trained on the courses udemy.com:<br>
+                                - JavaScript Complete Grandmaster 2022;<br> 
                                 - Docker for the Absolute Beginner - Hands On - DevOps;<br>                                
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
@@ -195,16 +196,19 @@
                 <tr>
                     <td>
                         <li>
+                            languages: Python, JavaScript, Lua
+                        </li>
+                        <li>
                             basic skills of working with Flask & Django
                         </li>
                         <li>
                             work with the Git | GitHub | Jira
                         </li>
                         <li>
-                            basic skills of working with Docker | Docker-compose | Jenkins
+                            basic skills of working with Docker | Docker-compose | Jenkins | k8s | Redis
                         </li>
                         <li>
-                            work experience with HTML5, CSS3, Bootstrap
+                            work experience with HTML, CSS, Bootstrap
                         </li>
                         <li>
                             studied literature:<br>
