--- a/index_en.html
+++ b/index_en.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hack" type="text/css"/>
     
     <link rel="stylesheet" href="style_lng.css">
     <title>Iurii Polnikov CV</title>
@@ -97,7 +98,7 @@
                     <td>
                         <li>
                             <p>
-                                11.2021 - until now | Associate QA Engineer in Genesys (www.genesys.com):<br>
+                                11.2021 - until now | Associate QA Engineer in Genesys (<a href="https://genesys.com">www.genesys.com</a>):<br>
                             </p>
                         </li>
                         <li>
@@ -111,7 +112,7 @@
                         </li>
                         <li>
                             <p>
-                                2 months | 09.2021 - 11.2021 | Software Development Trainee in KRAUD (kraud.ru):<br>
+                                2 months | 09.2021 - 11.2021 | Software Development Trainee in KRAUD (<a href="https://kraud.ru">kraud.ru</a>):<br>
                                 - support and development of an internal project on python/django/postgreSQL<br>
                                 - creating new project applications<br>
                                 - setting up synchronization of target application information with 1c, okdesk, confluence, MS Active Directory<br>
@@ -120,7 +121,7 @@
                         </li>
                         <li>
                             <p>
-                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from moscowpython.ru<br>
+                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from <a href="moscowpython.ru"moscowpython.ru</a><br>
                                 Django project development
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
@@ -167,8 +168,8 @@
                         <li>
                             <p>
                                 trained on the courses udemy.com:<br>
-                                - JavaScript Complete Grandmaster 2022;<br> 
-                                - Docker for the Absolute Beginner - Hands On - DevOps;<br>                                
+                                - <b>JavaScript</b> Complete Grandmaster 2022;<br> 
+                                - <b>Docker</b> for the Absolute Beginner - Hands On - DevOps;<br>                                
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>                                
@@ -177,9 +178,9 @@
                         <li>
                             <p>
                                 trained on the courses sololearn.com:<br>
-                                - Python for Beginners;<br>
-                                - Python Core;<br>
-                                - Intermediate Python;<br>                                
+                                - <b>Python</b> for Beginners;<br>
+                                - <b>Python</b> Core;<br>
+                                - Intermediate <b>Python</b>;<br>                                
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>                                
@@ -188,10 +189,10 @@
                         <li>
                             <p>
                                 trained on the courses stepik.org<br>
-                                - Python for Beginners;<br>
-                                - Python for advanced;<br>
-                                - Test automation with Selenium and Python;<br>
-                                - Kubernetes for users;<br>
+                                - <b>Python</b> for Beginners;<br>
+                                - <b>Python</b> for advanced;<br>
+                                - Test automation with <b>Selenium</b> and <b>Python</b>;<br>
+                                - <b>Kubernetes</b> for users;<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>
