--- a/index_en.html
+++ b/index_en.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">    
     
     <link rel="stylesheet" href="style_lng.css">
     <title>Iurii Polnikov CV</title>
@@ -120,7 +118,7 @@
                         </li>
                         <li>
                             <p>
-                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from <a href="moscowpython.ru"moscowpython.ru</a><br>
+                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from <a href="moscowpython.ru">moscowpython.ru</a><br>
                                 Django project development
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
