--- a/index_en.html
+++ b/index_en.html
@@ -192,6 +192,7 @@
                                 - <b>Python</b> for advanced;<br>
                                 - Test automation with <b>Selenium</b> and <b>Python</b>;<br>
                                 - <b>Kubernetes</b> for users;<br>
+                                - <b>JavaScript</b> for Beginners;<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>
