--- a/index_en.html
+++ b/index_en.html
@@ -166,7 +166,7 @@
                     <td>
                         <li>
                             <p>
-                                trained on the courses udemy.com:<br>
+                                trained on the courses <a href="https://udemy.com">udemy.com</a>:<br>
                                 - <b>JavaScript</b> Complete Grandmaster 2022;<br> 
                                 - <b>Docker</b> for the Absolute Beginner - Hands On - DevOps;<br>                                
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
@@ -176,10 +176,11 @@
                         </li>
                         <li>
                             <p>
-                                trained on the courses sololearn.com:<br>
+                                trained on the courses <a href="https://sololearn.com">sololearn.com</a>:<br>
                                 - <b>Python</b> for Beginners;<br>
                                 - <b>Python</b> Core;<br>
-                                - Intermediate <b>Python</b>;<br>                                
+                                - Intermediate <b>Python</b>;<br>
+                                - <b>Python</b> Data Structures;<br>  
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>                                
@@ -187,7 +188,7 @@
                         </li>
                         <li>
                             <p>
-                                trained on the courses stepik.org<br>
+                                trained on the courses <a href="https://stepik.org">stepik.org</a><br>
                                 - <b>Python</b> for Beginners;<br>
                                 - <b>Python</b> for advanced;<br>
                                 - Test automation with <b>Selenium</b> and <b>Python</b>;<br>
