--- a/index_en.html
+++ b/index_en.html
@@ -213,7 +213,7 @@
                 <tr>
                     <td>
                         <li>
-                            languages: Python, JavaScript, Lua
+                            languages: Python, JavaScript, Lua, HTML, CSS
                         </li>
                         <li>
                             basic skills of working with Flask & Django
