--- a/index_en.html
+++ b/index_en.html
@@ -48,7 +48,7 @@
                         Telegram:
                     </td>
                     <td>
-                        @akudja
+                        <a href="https://t.me/akudja">@akudja</a>
                     </td>
                 </tr>
                 <tr>
