--- a/index_en.html
+++ b/index_en.html
@@ -120,7 +120,7 @@
                         </li>
                         <li>
                             <p>
-                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from <a href="moscowpython.ru">moscowpython.ru</a><br>
+                                2,5 months | 05.2021 - 07.2021 | trained on the course «Learn Python» from <a href="https://moscowpython.ru">moscowpython.ru</a><br>
                                 Django project development
                                 <a href="https://github.com/IuriiPolnikov/Student_Rating">
                                     (https://github.com/polnikov/Student_Rating)
