--- a/index_en.html
+++ b/index_en.html
@@ -180,7 +180,8 @@
                                 - <b>Python</b> for Beginners;<br>
                                 - <b>Python</b> Core;<br>
                                 - Intermediate <b>Python</b>;<br>
-                                - <b>Python</b> Data Structures;<br>  
+                                - <b>Python</b> Data Structures;<br>
+                                - <b>JavaScript</b>;<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>                                
