--- a/index_en.html
+++ b/index_en.html
@@ -195,6 +195,7 @@
                                 - Test automation with <b>Selenium</b> and <b>Python</b>;<br>
                                 - <b>Kubernetes</b> for users;<br>
                                 - <b>JavaScript</b> for Beginners;<br>
+                                - <b>Python</b> programming;<br>
                                 <a href="https://github.com/polnikov/polnikov.github.io/tree/main/doc/certificates">
                                 Certificates
                                 </a>
